<resources>
    <string name="app_name">GoalE</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="health">Health</string>
    <string name="money">Financial</string>
    <string name="quantity">Quantity</string>
    <string name="quality">Quality</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="direction">Direction</string>
    <string name="start">Starting Point:</string>
    <string name="startInput">I Started Here..</string>
    <string name="current">Current Point:</string>
    <string name="currentInput">I am Currently..</string>
    <string name="goalInput">My End Goal Is..</string>
    <string name="goal">Goal:</string>
    <string name="zero">0%</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>