<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editgoalactivity.EditGoalActivity">


    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:editable="true"
        android:text="@string/title"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/positions"
        android:layout_width="193dp"
        android:layout_height="315dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle">

        <EditText
            android:id="@+id/etStart"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_weight="1"
            android:inputType="numberSigned|number"
            android:text="@string/startInput"
            android:textAlignment="viewEnd"
            android:textIsSelectable="true" />

        <EditText
            android:id="@+id/etCurrent"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_weight="1"
            android:inputType="numberSigned|number"
            android:text="@string/currentInput"
            android:textAlignment="viewEnd" />

        <EditText
            android:id="@+id/etEnd"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:inputType="numberSigned|number"
            android:text="@string/goalInput"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerUnits"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positions"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/etNotes"
        android:layout_width="381dp"
        android:layout_height="94dp"
        android:layout_marginStart="10dp"
        android:inputType="textAutoCorrect"
        android:text="@string/notes"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="220dp"
            android:layout_height="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight=".9"
            android:indeterminate="false"

            android:maxHeight="20dip"
            android:minHeight="20dip"
            android:progressDrawable="@drawable/purpleprogress" />

        <TextView
            android:id="@+id/tvPercentComplete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:editable="false"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/startLabel"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="14dp"
        android:editable="false"
        android:text="@string/start"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/positions"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/positions" />

    <TextView
        android:id="@+id/currentLabel"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="24dp"
        android:editable="false"
        android:text="@string/current"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/endLabel"
        app:layout_constraintEnd_toStartOf="@+id/positions"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startLabel" />

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="50dp"
        android:editable="false"
        android:text="@string/goal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/positions"
        app:layout_constraintEnd_toStartOf="@+id/positions"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>